# gnome-hwp-support

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
po/: POTFILES.in  ko.po
properties/: Makefile.am  hwp-properties-main.c  hwp-properties-model-provider.c  hwp-properties-model-provider.h  hwp-properties-model.c  hwp-properties-model.h  hwp-properties-module.c  hwp-properties-view.c  hwp-properties-view.h  props-data.c  props-data.h  test.c
thumbnailer/: Makefile.am  hwp-thumbnailer.c  hwp-thumbnailer.schemas  hwp-thumbnailer.thumbnailer
